<resources>
    <string name="app_name">pacaward</string>
    <string name="nav_offers">Offers</string>
    <string name="nav_transactions">Transactions</string>
    <string name="nav_cards">Cards</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="login_slogan">BE ONE OF US!</string>
    <string name="deletecardialog">Are you sure you want to delete this card?</string>
    <string name="confirm">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="logouttxt">Log out</string>
    <string name="emailplaceholder">example@email.com</string>
    <string name="noaccountonlogin">Create new account</string>
    <string name="sampleBrand">Sample Brand</string>
    <string name="sampleOfferTitle">Offer title</string>
    <string name="sampleDescription">This weekend every Sony product has a discount of 60%.  Don\'t miss this opportunity!</string>
    <string name="sampleLocation">40 Albert Road N520DU \n London </string>

</resources>
