<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">



    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="70dp"
        android:layout_height="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/logo_transparent" />
    <TextView
        android:id="@+id/login_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_slogan"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="20dp"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/logo_login"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/mail_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_login"
        android:backgroundTint="@color/colorOnPrimary"
        app:cardCornerRadius="30dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/mail_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_mail"/>

            <EditText
                android:id="@+id/emailinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/mail_ic"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/password_card"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail_card"
        android:backgroundTint="@color/colorOnPrimary"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/lock_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:background="@drawable/ic_password"

                />

            <EditText
                android:id="@+id/passwordinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/lock_ic"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
    android:id="@+id/login_card"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="70dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/password_card"
    android:backgroundTint="@color/colorOnPrimary"
    app:cardCornerRadius="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:textSize="18dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorAccent"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorOnPrimary"
            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>